--- a/vite-project/src/components/Sidebar/Sidebar.css
+++ b/vite-project/src/components/Sidebar/Sidebar.css
@@ -1,10 +1,12 @@
 .sidebar {
-  min-height: 100vh;
+  min-height: 100%;
   display: inline-flex;
   flex-direction: column;
   justify-content: space-between;
   background: #3c3d37;
   padding: 25px 15px;
+  position: fixed;
+  z-index: 100;
 }
 
 /* .sidebar i{
