--- a/vite-project/src/components/Sidebar/Sidebar.css
+++ b/vite-project/src/components/Sidebar/Sidebar.css
@@ -5,8 +5,8 @@
   justify-content: space-between;
   background: #3c3d37;
   padding: 25px 15px;
-  position: fixed;
-  z-index: 5;
+  /* position: fixed;
+  z-index: 5; */
 }
 
 /* .sidebar i{
