--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -9,9 +9,18 @@
 #root{
   min-height: 100vh;
   display: flex;
+  animation: fadeIn 1.5s;
 }
 
 body{
   background: #1E201E;
 }
 
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
