--- a/vite-project/src/components/Sidebar/Sidebar.css
+++ b/vite-project/src/components/Sidebar/Sidebar.css
@@ -38,6 +38,7 @@
 .sidebar .recent {
   display: flex;
   flex-direction: column;
+  animation: fadeIn 1.5s;
 }
 
 .sidebar .recent-title {
@@ -69,4 +70,10 @@
 .sidebar .buttom-item{
     padding-right: 10px;
     cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .sidebar{
+    display: none;
+  }
 }
